mobile fixes and general visual bug squashing

--- a/styles/form.css
+++ b/styles/form.css
@@ -19,12 +19,7 @@
   
   /** Base **/
   
-  *,
-  ::before,
-  ::after {
-    box-sizing: border-box;
-  }
-  
+ 
   button,
   input,
   optgroup,
