--- a/styles/main.css
+++ b/styles/main.css
@@ -1,34 +1,44 @@
 @font-face {
     font-family: "Eau Douce Sans";
-    src: url("fonts/eau_douce_sans-regular.woff2") format('woff2');
+    src: url("../fonts/eau_douce_sans-regular.woff2") format('woff2');
   }
   
   @font-face {
     font-family: "Eau Douce Sans";
-    src: url("fonts/eau_douce_sans-bold.woff2") format('woff2');
+    src: url("../fonts/eau_douce_sans-bold.woff2") format('woff2');
     font-weight: bold;
   }
   
   @font-face {
     font-family: "Eau Douce Sans";
-    src: url("fonts/eau_douce_sans-heavy.woff2") format('woff2');
+    src: url("../fonts/eau_douce_sans-heavy.woff2") format('woff2');
     font-weight: heavy;
   }
   
   @font-face {
     font-family: "Eau Douce Sans";
-    src: url("fonts/eau_douce_sans-light.woff2") format('woff2');
+    src: url("../fonts/eau_douce_sans-light.woff2") format('woff2');
     font-weight: light;
   }
   @font-face {
     font-family: "Eau Douce Sans";
-    src: url("fonts/eau_douce_sans-medium.woff2") format('woff2');
+    src: url("../fonts/eau_douce_sans-medium.woff2") format('woff2');
     font-weight: medium;
   }
   @font-face {
     font-family: "Eau Douce Sans";
-    src: url("fonts/eau_douce_sans-thin.woff2") format('woff2');
+    src: url("../fonts/eau_douce_sans-thin.woff2") format('woff2');
     font-weight: thin;
+  }
+  @font-face {
+    font-family: "Effra";
+    src: url("../fonts/Effra Regular.woff2") format('woff2');
+  }
+
+  *,
+  ::before,
+  ::after {
+    box-sizing: border-box;
   }
 body{
     background-color: #f5f5f5;
@@ -76,6 +86,7 @@ header{
 nav{
   display: flex;
   justify-content: space-between;
+  padding: 15px;
   /* display: grid;
   grid-template-columns: 350px 1fr; */
   background-color: #e6e5e5;
@@ -84,11 +95,13 @@ nav{
   top: 0;
   width: 100%;
   background: rgba(255, 255, 255, 0.7); /* Semi-transparent background */
-  backdrop-filter: blur(10px); /* Blur effect */
-  -webkit-backdrop-filter: blur(10px); /* Safari support */
-  padding: 15px;
+  backdrop-filter: blur(30px);
   z-index: 1000;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional subtle shadow */
+}
+header {
+  position: sticky !important;
+  top: 0 !important;
 }
 #logo{
   width: 350px;
@@ -288,10 +301,11 @@ nav .link::after{
   }
   nav {
     flex-direction: column;
+    padding: 0;
   }
   #nav-links {
-    flex-direction: column;
-    margin: 0 auto;
+    /* flex-direction: column; */
+    margin: 0 16;
 
   }
   #logo-link {
@@ -300,5 +314,38 @@ nav .link::after{
   }
   #logo{
     padding: 30px 0 0 10px;
+    width: 50px;
   }
+  #all-projects-links{
+    width: 80%;
+  }
+  #navbar{
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .project-card{
+    width: 350px;
+  }
+  footer{
+    flex-direction: column;
+    margin-top: 2em;
+    padding-top: 2em;
+  }
+  #contact-info{
+    margin-top: 20px;
+  }
+  #footer-links{
+    margin-top: 20px;
+  }
+  #welcome-text{
+    font-size: 18pt;
+  }
+  nav, .nav-links{
+    flex-direction: row;
+  }
+  nav a{
+    font-size: 14pt;
+  }
+
 }
